# fv

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  release-plz.toml
.claude/agents/: review-anti-patterns.md  review-error-handling.md  review-performance.md  review-readability.md  review-rust-best-practices.md  review-security.md
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: chore.yml  docs.yml  feat.yml  fix.yml  perf.yml  refactor.yml  style.yml  test.yml
.github/homebrew/: fv.rb.tmpl
.github/workflows/: build.yml  ci.yml  pages.yml  release.yml
docs/: CONTEXT.md  ERROR_HANDLING.md  ISSUE.md  PR.md
docs/adr/: 0001-async-file-operations.md  0002-preview-translation-provider.md  0002-system-info-in-header.md  0003-cross-platform-ci-builds.md  0004-release-plz-release-flow.md  0005-homebrew-tap-distribution.md  0006-preview-generation-ui-thread.md  0007-image-protocol-env-override.md  0008-markdown-preview-tui-markdown.md  0009-text-preview-syntax-highlight.md
docs/agents/: domain.md
docs/review-perspectives/: anti-patterns.md  error-handling.md  performance.md  readability.md  rust-best-practices.md  security.md
docs/rules/: error-messages.md  fs-formatting.md  iteration.md  keybindings.md  list-search.md
site/: app.js  index.html  style.css
src/: app.rs  app_context.rs  bookmark.rs  clipboard.rs  component.rs  config.rs  event.rs  main.rs
src/app/: async_job.rs  async_task.rs
src/cmd/: app.rs  attribute.rs  bookmark.rs  (+16 more)
(+112 files in other folders)
