[package]
name = "fv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
crossterm = "0.29.0"
dirs = "6.0.0"
libc = "0.2.186"
notify = "8.2.0"
num-format = "0.4.4"
open = "5.3.3"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
shell-words = "1.1.0"
serde_json = "1.0.149"
tracing = "0.1.44"
trash = "5.2.5"
unicode-width = "0.2.0"
infer = "0.19.0"
imagesize = "0.14.0"
chardetng = "1.0.0"
encoding_rs = "0.8.35"
symphonia = { version = "0.5.5", features = ["default"] }
